add total score wip
